# GPTX

./: .gitmodules  README.md  bitcoin_ethos.md  org_setup.sh  whitepaper.md
Crypto/contracts/: MyToken.sol
Sites/Info/: index.html  index.md
gptx-api-backend/: README.md
gptx-community/: README.md
gptx-contracts/: GPTXToken.sol  README.md
gptx-info-site/: .env.example  .gitignore  .kilo-template  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  HOSTINGER_DNS_SETUP.md  HTTPS_SETUP_GUIDE.md  IMPLEMENTATION.md  InitialUseCase.md  LICENSE  MSPOC.md  Makefile  PLAN.md  Procfile  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  docker-compose.yml  gptx_exchange.db  pyproject.toml  railway.toml  requirements.txt  start.py  test.db
gptx-info-site/.kilocode/rules/: memory-bank-instructions.md
gptx-info-site/docs/: conf.py  index.rst  qa_instructions.md
gptx-info-site/sandbox/: database.py.bak
gptx-info-site/scripts/: __init__.py  check_docstrings.py  deploy_railway.sh  dev_server.py  migrate_to_compliance.py  run_dev.py
gptx-info-site/src/gptx/: __init__.py  main.py
gptx-info-site/src/gptx/core/: __init__.py  config.py  database.py  logging.py
gptx-info-site/src/gptx/routers/: __init__.py  carbon.py  exchange.py  tokens.py
gptx-info-site/src/gptx/services/: __init__.py  ai_providers.py  blockchain.py
gptx-info-site/templates/: index.html
gptx-info-site/tests/: __init__.py  conftest.py
gptx-info-site/tests/integration/: __init__.py  test_api_endpoints.py
gptx-info-site/tests/unit/: __init__.py  test_ai_providers.py  test_database_setup.py
gptx-whitepaper/: README.md
